2020-01-22      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* m2/el/gm2-mode.el:  corrected email address.
	* testsuite/gm2/iso/run/pass/tinyconst4.mod:  corrected string
          length.

2020-01-20      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* m2/gm2-compiler/M2ALU.mod:  (InitialiseArrayWith) reformatted.
          (CheckGetCharFromString) New procedure function.
          (InitialiseArrayOfCharWith) New procedure function.
          (ConstructArrayConstant) Reformatted.
	* m2/gm2-compiler/M2GCCDeclare.mod:  (IsConstDependants)
          reformatted.
	* m2/gm2-compiler/NameKey.def:  (CharKey) declared exported.
	* m2/gm2-compiler/NameKey.mod:  (CharKey) New procedure function.
	* m2/gm2-gcc/m2type.c:  (BuildCharConstantChar) New function.
          (BuildCharConstant) use BuildCharConstantChar.
	* m2/gm2-gcc/m2type.def:  (BuildCharConstantChar) declared.
	* m2/gm2-gcc/m2type.h:  (BuildCharConstantChar) declared.
	* Fixes bugs shown in testsuite/gm2/iso/run/pass/conststrarray.mod.

2020-01-13      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* m2/bnf/m2-2.bnf:  (SetType) detect whether the set
          was described as PACKED and pass a boolean into
	  BuildSetType.
	* m2/gm2-compiler/M2Bitset.mod:  PutSet extra parameter.
	* m2/gm2-compiler/M2GCCDeclare.mod:  (DeclareLargeOrSmallSet)
	  pass packed to BuildSetType.
	* m2/gm2-compiler/M2System.mod:  (AttemptToCreateSetType)
	  PutSet extra boolean (FALSE) parameter.
	* m2/gm2-compiler/P2SymBuild.def:  (BuildSetType)
	  extra parameter ispacked.
	* m2/gm2-compiler/P2SymBuild.mod:  (BuildSetType)
	  call PutSet with an extra boolean parameter.
	* m2/gm2-compiler/SymbolTable.def:  (IsSetPacked)
	  New procedure function declaration.
	* m2/gm2-compiler/SymbolTable.mod:  (IsSetPacked)
          New procedure function implementation.  (PutSet)
	  add a third parameter which determines whether the set is packed.
	* m2/gm2-gcc/m2assert.h:  remove ' from the format string.